discussion/kv_engine/174519/174519_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-35297: Add optional random sampling mode to range-scan

The range scan functionality can be adapted so that a client
could request that the scan returns a random number of keys
or documents.

This commit adds an optional configuration parameter that
will allow a client to set a prng seed value and a number
of samples to return. If the collection in the snapshot
has more items than samples, the range scan continue will
return a random set of keys or documents.

Change-Id: I3ca3af43e5e04d621a4f1df164fefcaebd106149

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-05-05 14:07:54.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-05-05 16:06:59.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17295/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/range_scan_optional_configuration.h:20:5: error: unknown type name "uint64_t" [clang-diagnostic-error]
    uint64_t vbUuid{0};
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/range_scan_optional_configuration.h:22:5: error: unknown type name "uint64_t" [clang-diagnostic-error]
    uint64_t seqno{0};
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/range_scan_optional_configuration.h:29:5: error: unknown type name "size_t" [clang-diagnostic-error]
    size_t samples{0};
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/range_scan_optional_configuration.h:30:5: error: unknown type name "uint32_t" [clang-diagnostic-error]
    uint32_t seed{0};
    ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17295/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/range_scan_optional_configuration.h:20:5:
error: unknown type name "uint64_t" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17295/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18232/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18232/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38566/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45921/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/16288/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20078/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19394/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6998/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27452/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6906/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19052/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
